--- a/jenkins/volume.yaml
+++ b/jenkins/volume.yaml
@@ -30,7 +30,7 @@ spec:
         - key: kubernetes.io/hostname
           operator: In
           values:
-          - worker-node01
+          - minikube-m02
 
 ---
 apiVersion: v1
