--- a/jenkins/service.yaml
+++ b/jenkins/service.yaml
@@ -12,6 +12,8 @@ spec:
     app: jenkins-server
   type: NodePort  
   ports:
-    - port: 8080
+    - name: http
+      port: 8080
+      protocol: TCP
       targetPort: 8080
-      nodePort: 32000
+      nodePort: 30009
