--- a/jenkins/service.yaml
+++ b/jenkins/service.yaml
@@ -1,19 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-service
-  namespace: jenkins
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path:   /
-      prometheus.io/port:   '8080'
+  name: jenkins
 spec:
-  selector: 
-    app: jenkins-server
-  type: NodePort  
+  type: NodePort
   ports:
-    - name: http
-      port: 8080
-      protocol: TCP
-      targetPort: 8080
-      nodePort: 30009
+  - port: 8080
+    targetPort: 8080
+    nodePort: 30009
+  selector:
+    app: jenkins-server
