--- a/jenkins/service.yaml
+++ b/jenkins/service.yaml
@@ -11,7 +11,7 @@ spec:
       targetPort: 8080
       nodePort: 32000 # NodePort can be replaced by the LoadBalancer
   selector:
-    app: jenkins-server
+    app: jenkins
 ---
 # ClusterIP for the Jenkins-jnlp
 apiVersion: v1
@@ -25,4 +25,4 @@ spec:
     - port: 50000
       targetPort: 50000
   selector:
-    app: jenkins-server
+    app: jenkins
